--- a/style.css
+++ b/style.css
@@ -7,10 +7,8 @@ body {
     overflow: auto;
 }
 
-.header1Div {
-    background-color: #fafbf9;
-    /* background-color: #22c1c3; */
-    padding: 15px;
+h1{
+    font-size: 34px;
 }
 
 a,
@@ -41,7 +39,6 @@ a:visited {
 
 
 section,
-.header1Div,
 #me {
     border: 1px solid#e3e3e3;
 
@@ -52,9 +49,24 @@ figure {
     margin: 0 20px 20px 0;
 }
 
-p {}
+
 
 ul li {
     list-style-type: none;
 
+}
+
+#buttonwrap{
+width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+button {
+    margin: 5px;
+    background-color: inherit;
+    width: 114px;
+    height: 40px;
+    box-shadow: 0px 3px 5px orange;
 }
